--- a/index.html
+++ b/index.html
@@ -308,12 +308,12 @@
     function color_clear(){
 
         red.forEach(element => {
-            element.style.background="transparent";
+            elemet.style.background="transparent";
             element.querySelector("b").innerHTML="";
         });
 
         green.forEach(element => {
-            element.style.background="transparent";
+            elemet.style.background="transparent";
         });
 
         console.log("WRONG",red);
